# nexer-trazone

./: .env.example  .gitignore  Anchor.example.toml  Cargo.toml  README.md  setup_redis.sh
.cargo/: config.toml
programs/nexus_erebus_trade_zone/: Cargo.toml
scripts/: deploy_devnet.sh
src/: conectis.js  index.js
src/modules/: aiMetadata.js  buy.js  genelia.js  metadata.js  mint.js  sell.js  swap.js  trade.js
src/scripts/: exampleScript.js  unlistExpired.js
src/utils/: genelia.js  sofia.js
tests/: market.test.js
